--- a/res/layout/sliding_menu_frame.xml
+++ b/res/layout/sliding_menu_frame.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/sliding_menu_frame"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="horizontal" >
     
+    <fragment
+        android:id="@+id/torrent_list_menu"
+        android:name="us.supositi.gearshift.TorrentListMenuFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp" />
 
-</FrameLayout>
+</LinearLayout>
