--- a/res/layout/menu_list_header.xml
+++ b/res/layout/menu_list_header.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@android:drawable/dark_header"
+    android:padding="4dp"
     android:id="@+id/filter_header"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
