--- a/res/menu/list_fragment.xml
+++ b/res/menu/list_fragment.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/refresh"
+    <item android:id="@+id/menu_refresh"
         android:icon="@drawable/ic_menu_refresh"
         android:visible="true"
-        android:showAsAction="ifRoom"
+        android:orderInCategory="0"
+        android:showAsAction="ifRoom|collapseActionView"
+        android:actionLayout="@layout/action_progress_bar"
         android:title="@string/refresh"
         android:titleCondensed="@string/refresh"/>
     
-    <item android:id="@+id/alt_speed"
-        android:icon="@drawable/ic_menu_alt_speed"
+    <item android:id="@+id/menu_alt_speed"
+        android:icon="@drawable/ic_menu_alt_speed_off"
         android:visible="true"
         android:showAsAction="ifRoom"
         android:title="@string/alt_speed_label_on"
