--- a/res/layout/activity_torrent_twopane.xml
+++ b/res/layout/activity_torrent_twopane.xml
@@ -26,17 +26,25 @@
         android:layout_marginRight="16dp"
         tools:layout="@android:layout/list_content" />
     
-    <View android:id="@+id/vertical_divider"
-        android:background="@drawable/shadow"
+    <RelativeLayout
+        android:id="@+id/torrent_detail_panel"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
         android:layout_marginLeft="-32dp"
-        android:layout_width="16dp"
-        android:layout_height="match_parent" />
-    
-	<android.support.v4.view.ViewPager
-	    android:id="@+id/torrent_detail_pager"
-	    android:layout_width="0dp"
-	    android:layout_height="fill_parent"
-	    android:layout_weight="2"
-	    android:paddingRight="16dp" />
+        android:paddingRight="16dp" >
+
+	    <View android:id="@+id/vertical_divider"
+	        android:background="@drawable/shadow"
+	        android:layout_width="16dp"
+	        android:layout_height="match_parent" />
+
+		<android.support.v4.view.ViewPager
+		    android:id="@+id/torrent_detail_pager"
+		    android:layout_width="match_parent"
+		    android:layout_height="match_parent"/>
+		
+    </RelativeLayout>
+
 	
 </LinearLayout>
