--- a/res/anim/slide_right.xml
+++ b/res/anim/slide_right.xml
@@ -3,5 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:anim/accelerate_interpolator">
     
-    <translate android:fromXDelta="100%p" android:toXDelta="0" android:duration="100" />
+    <translate android:duration="250" android:fromXDelta="100%p" android:toXDelta="0" />
+    <alpha android:duration="250" android:fromAlpha="0.0" android:toAlpha="1.0" />
+    <rotate
+        android:duration="250"
+        android:fromDegrees="-5"
+        android:pivotX="100%"
+        android:pivotY="0"
+        android:toDegrees="0" />
 </set>
