--- a/res/layout/activity_torrent_twopane.xml
+++ b/res/layout/activity_torrent_twopane.xml
@@ -41,6 +41,7 @@
 
 		<android.support.v4.view.ViewPager
 		    android:id="@+id/torrent_detail_pager"
+		    android:layout_marginLeft="16dp"
 		    android:layout_width="match_parent"
 		    android:layout_height="match_parent"/>
 		
