--- a/res/layout/fragment_torrent_detail.xml
+++ b/res/layout/fragment_torrent_detail.xml
@@ -1,8 +1,16 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/torrent_detail_container"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="16dp"
     tools:context=".TorrentDetailFragment" >
-</FrameLayout>
+    
+	<TextView
+	    xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:id="@+id/torrent_detail_title"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    style="?android:attr/textAppearanceLarge" />
+</LinearLayout>
+    <!-- android:background="@android:drawable/dialog_holo_light_frame" -->
