give the detail panel a darker background

--- a/res/layout/activity_torrent_twopane.xml
+++ b/res/layout/activity_torrent_twopane.xml
@@ -31,8 +31,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
-        android:layout_marginLeft="-32dp"
-        android:paddingRight="16dp" >
+        android:layout_marginLeft="-32dp">
 
 	    <View android:id="@+id/vertical_divider"
 	        android:background="@drawable/shadow"
