--- a/res/layout/fragment_torrent_detail.xml
+++ b/res/layout/fragment_torrent_detail.xml
@@ -4,14 +4,16 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/detail_background"
-    android:padding="16dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
     tools:context=".TorrentDetailFragment" >
     
 	<TextView
 	    xmlns:android="http://schemas.android.com/apk/res/android"
 	    android:id="@+id/torrent_detail_title"
+	    style="@style/TorrentTitle"
 	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    style="?android:attr/textAppearanceLarge" />
+	    android:layout_height="wrap_content" />
+
 </LinearLayout>
     <!-- android:background="@android:drawable/dialog_holo_light_frame" -->
