--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -15,6 +15,21 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
+    
+    <style name="TorrentTitle">
+	   	<item name="android:paddingLeft">4dp</item>
+	    <item name="android:paddingBottom">4dp</item>
+	    <item name="android:textColor">#333</item>
+	    <item name="android:textSize">16sp</item>
+	    <item name="android:textStyle">bold</item>
+	    <item name="android:gravity">center</item>
+	    <item name="android:ellipsize">end</item>
+<!-- 	    <item name="android:background">@drawable/card_background</item> -->
+	    <item name="android:shadowColor">#77000000</item>
+	    <item name="android:shadowDx">1</item>
+	    <item name="android:shadowDy">1</item>
+	    <item name="android:shadowRadius">1</item>
     </style>
 
 </resources>
