--- a/res/layout/action_progress_bar.xml
+++ b/res/layout/action_progress_bar.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_gravity="center"
-    android:layout_width="32dp"
-    android:layout_height="32dp" >
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/action_progress_bar_container"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp" >
 
-</ProgressBar>
+    <ProgressBar
+        android:layout_width="32dp"
+        android:layout_height="32dp" >
+    </ProgressBar>
+
+</FrameLayout>
