--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -25,11 +25,15 @@
 	    <item name="android:textStyle">bold</item>
 	    <item name="android:gravity">center</item>
 	    <item name="android:ellipsize">end</item>
-<!-- 	    <item name="android:background">@drawable/card_background</item> -->
 	    <item name="android:shadowColor">#77000000</item>
 	    <item name="android:shadowDx">1</item>
 	    <item name="android:shadowDy">1</item>
 	    <item name="android:shadowRadius">1</item>
+    </style>
+    
+    <style name="TorrentDetailContainer">
+   	    <item name="android:background">@drawable/card_background</item>
+   	    <item name="android:padding">16dp</item>
     </style>
 
 </resources>
