--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -29,18 +29,60 @@
 	    <item name="android:shadowDx">1</item>
 	    <item name="android:shadowDy">1</item>
 	    <item name="android:shadowRadius">1</item>
+	    <item name="android:layout_width">fill_parent</item>
+	    <item name="android:layout_height">wrap_content</item>
     </style>
     
     <style name="TorrentDetailContainer">
    	    <item name="android:background">@drawable/card_background</item>
-   	    <item name="android:padding">8dp</item>
-   	    <item name="android:paddingLeft">16dp</item>
-   	    <item name="android:paddingRight">16dp</item>
    	    <item name="android:layout_marginTop">8dp</item>
     </style>
-    
+        
     <style name="TorrentDetailExpander">
-        <item name="android:textSize">20sp</item>
+        <item name="android:background">@drawable/list_selector_holo_light</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:clickable">true</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">4dp</item>
+   	    <item name="android:paddingLeft">16dp</item>
+   	    <item name="android:paddingRight">16dp</item>
+    </style>
+    
+    <style name="TorrentDetailExpanderText">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#900000</item>
+        <item name="android:layout_marginRight">40dp</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
+    
+    <style name="TorrentDetailExpanderImage">
+        <item name="android:layout_width">32dp</item>
+        <item name="android:layout_height">32dp</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_marginLeft">-32dp</item>
+        <item name="android:background">@drawable/ic_section_expand</item>
+    </style>
+    
+    <style name="TorrentDetailExpanderImageCollapse" parent="@style/TorrentDetailExpanderImage">
+        <item name="android:background">@drawable/ic_section_collapse</item>
     </style>
 
+    <style name="TorrentDetailContent">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">8dp</item>
+   	    <item name="android:paddingLeft">16dp</item>
+   	    <item name="android:paddingRight">16dp</item>
+    </style>
+    
+    <style name="TorrentDetailContentCollapsed" parent="@style/TorrentDetailContent">
+        <item name="android:visibility">gone</item>
+    </style>
 </resources>
