--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -85,4 +85,15 @@
     <style name="TorrentDetailContentCollapsed" parent="@style/TorrentDetailContent">
         <item name="android:visibility">gone</item>
     </style>
+    
+    <style name="TorrentDetailOverviewHeading">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:background">@drawable/border_bottom</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
+    </style>
 </resources>
