--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -21,4 +21,26 @@
         <item>active</item>
         <item>checking</item>
     </string-array>
+    
+    <string-array name="torrent_priority">
+        <item>Low</item>
+        <item>Normal</item>
+        <item>High</item>
+    </string-array>
+    <string-array name="torrent_priority_values" translatable="false">
+        <item>low</item>
+        <item>normal</item>
+        <item>high</item>
+    </string-array>
+    
+    <string-array name="torrent_seed_ratio_mode">
+        <item>Use global settings</item>
+        <item>Stop seeding at ratio</item>
+        <item>Seed regardless of ratio</item>
+    </string-array>
+    <string-array name="torrent_seed_ratio_mode_values">
+        <item>global</item>
+        <item>user</item>
+        <item>infinite</item>
+    </string-array>
 </resources>
