--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="detail_background">#ddd</color>
+    <color name="transparent">#00000000</color>
+    <color name="transparent_white">#66ffffff</color>
 </resources>
